--- a/gestao/templates/home/home.html
+++ b/gestao/templates/home/home.html
@@ -63,7 +63,7 @@
                         <strong>grande</strong>
                     </h2>
                     <p>
-                        Esse pequeno site foi "desenvolvido" não sei pra que, pois não necessidade alguma de criar um site que mostre os donos de
+                        Esse pequeno site foi "desenvolvido" não sei pra que, pois não há necessidade alguma de criar um site que mostre os donos de
                         determinada fazenda, ou até mesmo, os animais que estão na mesma. Mas aqui está a lista dos desenvolvedores
                         do site:
                     </p>
