--- a/gestao/templates/animals/list.html
+++ b/gestao/templates/animals/list.html
@@ -45,15 +45,15 @@
                     <td>{{animal.typing}}</td>
                     <td>{{animal.farm}}</td>
                     <td>
-                        <a type="button" class="btn btn-primary" title="Editar"
+                        <button type="button" class="btn btn-primary" title="Editar"
                             href="/gestao/animals/edit/{{animal.id}}/">
                             <img src="{% static 'admin/img/edit.png' %}">
-                        </a>
+                        </button>
                         |
-                        <a type="button" class="btn btn-primary" title="Remover"
-                            href="/gestao/animals/delete/{{animal.id}}/">
+                        <button type="button" data-id="{{animal.id}}" class="btn btn-primary" data-target="#chamarmodal"
+                            data-toggle="modal" title="Remover">
                             <img src="{% static 'admin/img/trash.png' %}">
-                        </a>
+                        </button>
                     </td>
                 </tr>
                 {% endfor %}
@@ -64,4 +64,42 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="chamarmodal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Nova mensagem</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Deseja realmente excluir ?</p>
+            </div>
+            <div class="modal-footer">
+                <form action="" id="confirm" method="post">
+                    {% csrf_token %}
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Não</button>
+                    <button type="submit" class="btn btn-primary">Sim</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+{% block script %}
+<script>$('#chamarmodal').on('show.bs.modal', function (event) {
+        var button = $(event.relatedTarget) // Botão que acionou o modal
+        var recipient = button.data('id') // Extrai informação dos atributos data-*
+        // Se necessário, você pode iniciar uma requisição AJAX aqui e, então, fazer a atualização em um callback.
+        // Atualiza o conteúdo do modal. Nós vamos usar jQuery, aqui. No entanto, você poderia usar uma biblioteca de data binding ou outros métodos.
+        var modal = $(this)
+        modal.find('#confirm').attr('action', '/gestao/animals/delete/' + recipient + '/')
+        // Aqui localizo o a //localizo o atributo // Aqui eu passo o valor desejado
+        //tag que tem o id   // no qual eu quero
+        //#confirm           // colocar o valor
+    })</script>
 {% endblock %}
