--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,7 +6,7 @@
             {% csrf_token %}
             <table>
                 <tr>
-                    <td>{{form.first_name.label}}</td>
+                    <td>{{form.username.label}}</td>
                     <td>{{form.username}}</td>
                 </tr>
                 <tr>
